--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -5,10 +5,7 @@
 
 $gray-medium-light: #eaeaea;
 
-
-
 /* universal */
-
 body {
   padding-top: 60px;
 }
@@ -23,13 +20,14 @@ textarea {
 
 .center {
   text-align: center;
+
   h1 {
     margin-bottom: 10px;
   }
+
 }
 
 /* typography */
-
 h1, h2, h3, h4, h5, h6 {
   line-height: 1;
 }
@@ -55,9 +53,7 @@ p {
   line-height: 1.7em;
 }
 
-
 /* header */
-
 #logo {
   float: left;
   margin-right: 10px;
@@ -67,69 +63,79 @@ p {
   letter-spacing: -1px;
   padding-top: 9px;
   font-weight: bold;
+
   &:hover {
     color: white;
     text-decoration: none;
   }
+
 }
 
 /* footer */
-
 footer {
   margin-top: 45px;
   padding-top: 5px;
   border-top: 1px solid $gray-medium-light;
   color: $gray-light;
+
   a {
     color: $gray;
+
     &:hover {
       color: $gray-darker;
     }
+
   }
+
   small {
     float: left;
   }
+
   ul {
     float: right;
     list-style: none;
+
     li {
       float: left;
       margin-left: 15px;
     }
+
   }
+
 }
 
 /* miscellaneous */
-
 .debug_dump {
   clear: both;
   float: left;
   width: 100%;
   margin-top: 45px;
- -moz-box-sizing:    border-box;
+  -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
-  box-sizing:         border-box;
+  box-sizing: border-box;
 }
 
-
 /* sidebar */
-
 aside {
   section.user_info {
     margin-top: 20px;
   }
+
   section {
     padding: 10px 0;
     margin-top: 20px;
+
     &:first-child {
       border: 0;
       padding-top: 0;
     }
+
     span {
       display: block;
       margin-bottom: 3px;
       line-height: 1;
     }
+
     h1 {
       font-size: 1.4em;
       text-align: left;
@@ -137,7 +143,9 @@ aside {
       margin-bottom: 3px;
       margin-top: 0px;
     }
+
   }
+
 }
 
 .gravatar {
@@ -150,15 +158,13 @@ aside {
 }
 
 /* forms */
-
 input, textarea, select, .uneditable-input {
   border: 1px solid #bbb;
   width: 100%;
   margin-bottom: 15px;
-  -moz-box-sizing:    border-box;
+  -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
-  box-sizing:   border-box;
-
+  box-sizing: border-box;
 }
 
 input {
@@ -167,28 +173,46 @@ input {
 
 #error_explanation {
   color: red;
+
   ul {
     color: red;
-    margin: 0 0 30px 0;
   }
+
 }
 
 .field_with_errors {
-  @extend .has-error;
+  @extend .has-error;d
+
   .form-control {
     color: $state-danger-text;
   }
+
 }
+
 .checkbox {
   margin-top: -10px;
   margin-bottom: 10px;
+
   span {
     margin-left: 25px;
     font-weight: normal;
   }
+
 }
 
 #session_remember_me {
   width: auto;
   margin: 0;
+}
+
+/* Users index */
+.users {
+  list-style: none;
+  margin: 0;
+
+  li {
+    overflow: auto;
+    padding: 10px 0;
+    border-bottom: 1px solid $gray-lighter;
+  }
 }
